refocus_cmake/include/GPC3300/Fbida.h

FBIDAAPI int WINAPI DaInputDI(HANDLE, DWORD *);
FBIDAAPI int WINAPI DaOutputDO(HANDLE, DWORD);
FBIDAAPI int WINAPI DaAdjustVR(HANDLE, ULONG, ULONG, ULONG, ULONG);
FBIDAAPI int WINAPI DaReadAdjustVR(HANDLE, ULONG);
FBIDAAPI int WINAPI DaReadAdjustVREx(HANDLE, ULONG, ULONG);
FBIDAAPI int WINAPI DaSetFifoConfig(HANDLE, PDAFIFOREQ);
FBIDAAPI int WINAPI DaGetFifoConfig(HANDLE, PDAFIFOREQ);
FBIDAAPI int WINAPI DaSetInterval(HANDLE, ULONG);
FBIDAAPI int WINAPI DaGetInterval(HANDLE, ULONG *);
FBIDAAPI int WINAPI DaSetFunction(HANDLE, ULONG, ULONG);
FBIDAAPI int WINAPI DaGetFunction(HANDLE, ULONG, ULONG *);
FBIDAAPI int WINAPI DaCalibration(HANDLE, ULONG, ULONG);
FBIDAAPI int WINAPI DaSetCurrentDir(HANDLE hDeviceHandle, DWORD Data);
FBIDAAPI int WINAPI DaGetCurrentDir(HANDLE hDeviceHandle, DWORD *pData);
FBIDAAPI int WINAPI DaSetPowerSupply(HANDLE hDeviceHandle, DWORD ExOnOff);
FBIDAAPI int WINAPI DaGetPowerSupply(HANDLE hDeviceHandle, DWORD *ExOnOff);
FBIDAAPI int WINAPI DaSetExcessVoltage(HANDLE hDeviceHandle, DWORD ExOnOff);
FBIDAAPI int WINAPI DaGetRelayStatus(HANDLE hDeviceHandle, DWORD *Status);
FBIDAAPI int WINAPI DaGetOVStatus(HANDLE hDeviceHandle, DWORD *LowStatus, DWORD *HighStatus);
int WINAPI DaDataConv(UINT, PVOID, UINT, PDASMPLREQ, UINT, PVOID, PUINT, PDASMPLREQ, UINT, UINT, LPDACONVPROC);
int WINAPI DaWriteFile(LPCTSTR, PVOID, ULONG, ULONG, ULONG);