refocus_cmake/include/GPC3300/Gpcda.h

// -----------------------------------------------------------------------
//	Analog Output Request Condition Structure for Each Channel
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChNo;
	ULONG			ulRange;
} DASMPLCHREQ, *PDASMPLCHREQ;
// -----------------------------------------------------------------------
//	Analog Output Request Condition Structure
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChCount;
	DASMPLCHREQ		SmplChReq[256];
	ULONG			ulSamplingMode;
	float			fSmplFreq;
	ULONG			ulSmplRepeat;
	ULONG			ulTrigMode;
	ULONG			ulTrigPoint;
	ULONG			ulTrigDelay;
	ULONG			ulEClkEdge;
	ULONG			ulTrigEdge;
	ULONG			ulTrigDI;
} DASMPLREQ, *PDASMPLREQ;
// -----------------------------------------------------------------------
//	Fifo Analog Output Request Condition Structure (for the PCI-3525)
// -----------------------------------------------------------------------
typedef struct {
	ULONG			ulChCount;
	DASMPLCHREQ	SmplChReq[256];
	float			fSmplFreq;
	ULONG			ulSmplRepeat;
	ULONG			ulSmplNum;
	ULONG			ulStartTrigCondition;
	ULONG			ulStopTrigCondition;
	ULONG			ulEClkEdge;
	ULONG			ulTrigEdge;
} DAFIFOREQ, *PDAFIFOREQ;