refocus_cmake/include/GPC3300/FbiDa.bas


Declare Function DaInputDI Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef dwData As Long) As Long
Declare Function DaOutputDO Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal dwData As Long) As Long

Declare Function DaAdjustVR Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulAdjustCh As Long, ByVal ulSelVolume As Long, ByVal ulDirection As Long, ByVal ulTap As Long) As Long
Declare Function DaReadAdjustVR Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulAdjustCh As Long) As Long
Declare Function DaReadAdjustVREx Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulAdjustCh As Long, ByVal ulControl As Long) As Long

Declare Function DaDataConv Lib "FbiDaDc.DLL" (ByVal uSrcFormCode As Long, ByRef pSrcData As Any, ByVal uSrcSmplDataNum As Long, ByRef pSrcSmplReq As DASMPLREQ, ByVal uDestFormCode As Long, ByRef pDestData As Any, ByRef puDestSmplDataNum As Long, ByRef pDestSmplReq As DASMPLREQ, ByVal uEffect As Long, ByVal uCount As Long, ByVal pfnConv As Long) As Long
Declare Function DaWriteFile Lib "FbiDaDc.DLL" (ByVal pszPathName As String, ByRef pSmplData As Any, ByVal ulFormCode As Long, ByVal ulSmplNum As Long, ByVal ulChCount As Long) As Long

Declare Function CreateEvent Lib "kernel32" Alias "CreateEventA" (ByVal lpEventAttributes As Long, ByVal ManualReset As Long, ByVal bInitialState As Long, ByVal lpName As String) As Long
Declare Function WaitForSingleObject Lib "kernel32" (ByVal hHandle As Long, ByVal dwMilliseconds As Long) As Long
Declare Function CloseHandle Lib "kernel32" (ByVal hObject As Long) As Long
Declare Function ResetEvent Lib "kernel32" (ByVal hEvent As Long) As Long

Declare Function DaSetFifoConfig Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef pDaFifoConfig As DAFIFOREQ) As Long
Declare Function DaGetFifoConfig Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef pDaFifoConfig As DAFIFOREQ) As Long

Declare Function DaSetInterval Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulInterval As Long) As Long
Declare Function DaGetInterval Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef ulInterval As Long) As Long

Declare Function DaSetFunction Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulChNo As Long, ByVal ulFunction As Long) As Long
Declare Function DaGetFunction Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulChNo As Long, ByRef ulFunction As Long) As Long

Declare Function DaCalibration Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ulAdjustCh As Long, ByVal ulRange As Long) As Long

Declare Function DaSetCurrentDir Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal dwData As Long) As Long
Declare Function DaGetCurrentDir Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef dwData As Long) As Long
Declare Function DaSetPowerSupply Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ExOnOff As Long) As Long
Declare Function DaGetPowerSupply Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef ExOnOff As Long) As Long
Declare Function DaSetExcessVoltage Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByVal ExOnOff As Long) As Long
Declare Function DaGetRelayStatus Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef Status As Long) As Long
Declare Function DaGetOVStatus Lib "FbiDa.DLL" (ByVal hDeviceHandle As Long, ByRef LowStatus As Long, ByRef HighStatus As Long) As Long

